# cmake_demo

./: CMakeLists.txt  README.md  cmake_toolchain.cmake
src/: .CMakeLists.txt.swp  CMakeLists.txt  main.cpp
src/dynamiclib/: CMakeLists.txt
src/dynamiclib/dlib/: CMakeLists.txt  dlibFile.cpp
src/dynamiclib/include/dlib/: dlibFile.h
src/module1/: CMakeLists.txt
src/module1/demo/: CMakeLists.txt  fileMod1.cpp
src/module1/include/demo/: fileMod1.h
src/module2/demo/: CMakeLists.txt  fileMod2.cpp
src/module2/include/demo/: fileMod2.h
src/staticlib/: CMakeLists.txt
src/staticlib/include/slib/: slibFile.h
src/staticlib/slib/: CMakeLists.txt  slibFile.cpp
